# uitm-devops-challenge_trio

./: README.md  pyproject.toml
.github-main/workflows/: ai-service-security.yml
.github/workflows/: ai-service-security.yml  security.yml
rentverse-ai-service/: debug_prediction.py  nginx.conf  pyproject.toml  requirements.txt  test_api.py  test_batch_prediction.py  test_cors.py  test_new_routes.py
rentverse-ai-service/notebooks/: Rentverse_rentprice_prediction.ipynb
rentverse-ai-service/rentverse/: auth.py  cli.py  config.py  main.py  test_auth.py
rentverse-ai-service/rentverse/api/: middleware.py
rentverse-ai-service/rentverse/core/: exceptions.py  logging.py
rentverse-ai-service/rentverse/models/: ml_models.py
rentverse-backend-main/: pnpm-lock.yaml
rentverse-backend/src/: index.js
rentverse-backend/src/middleware/: loginMonitor.js
rentverse-backend/src/routes/: auth.routes.js
rentverse-backend/src/services/: securityLogger.js
rentverse-datasets/: rentals.csv
rentverse-datasets-main/: run_all.ps1
rentverse-datasets/fazwaz_propertyrent/: rentals.csv  run_all.ps1  settings.py
rentverse-datasets/output/output/: selangor_house.csv
rentverse-frontend/: package.json  pnpm-lock.yaml
rentverse-frontend-main/: package-lock.json  package.json
rentverse_mobile_app/: README.md  pubspec.yaml
rentverse_mobile_app/lib/: main.dart
rentverse_mobile_app/linux/: CMakeLists.txt
rentverse_mobile_app/test/: widget_test.dart
rentverse_mobile_app/web/: index.html  manifest.json
rentverse_mobile_app/windows/: CMakeLists.txt
(+101 files in other folders)
